--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,9 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App th {
+  text-align: center;
+}
+
+.App-add-item-column {
+  padding-left: 7%;
 }
 
 .App-header {
@@ -12,17 +15,4 @@
   height: 150px;
   padding: 20px;
   color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
